Refactor DeltaTetradTest and upgrade compiler version
Replaced DeltaTetradTest with DeltaTetradTest2 in Fofc.java to utilize an updated implementation. Added new classes DeltaTetradTest2 and Tetrad2 for improved functionality. Removed debug output from Mimbuild.java and updated pom.xml compiler target/source to Java 21 for compatibility.